Fixed test for getUserContractTemplate